[workspace]

members = [
    "piet/piet",
    "piet/piet-cairo",
    "piet/piet-common",
    "piet/piet-coregraphics",
    "piet/piet-direct2d",
    "piet/piet-web",
    "piet/piet-web/examples/basic",
    "piet/piet-svg",
    ".",
]

[package]
name = "passutil"
version = "0.1.0"
edition = "2021"

[dependencies]
piet = { path = "piet/piet", features = ["png", "serde"] }
piet-common = { path = "piet/piet-common", features = ["png"] }
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

encoding_rs = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
